[gd_scene load_steps=11 format=3 uid="uid://cj7avgrv0fysf"]

[ext_resource type="Texture2D" uid="uid://k2mvngimr0dv" path="res://1x/Artboard 1.png" id="1_fuppl"]
[ext_resource type="Script" path="res://PowerPlay.gd" id="1_m85eq"]
[ext_resource type="PackedScene" uid="uid://x5w8o8a4cmeh" path="res://junction.tscn" id="2_l04xk"]
[ext_resource type="PackedScene" uid="uid://dqdt5t0foxifc" path="res://robot.tscn" id="2_tuwi1"]
[ext_resource type="PackedScene" uid="uid://c85hn6a6s1shf" path="res://substation.tscn" id="4_5adhj"]
[ext_resource type="PackedScene" uid="uid://becd5bsmbnu07" path="res://scoreBoard.tscn" id="5_qn2se"]
[ext_resource type="PackedScene" uid="uid://enqwx4levape" path="res://terminal.tscn" id="6_wu7gl"]
[ext_resource type="Script" path="res://NavigationRegion2D.gd" id="7_y3wlr"]
[ext_resource type="PackedScene" uid="uid://bwsrqlykhfr4w" path="res://oponent.tscn" id="8_h8j5a"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ncpnd"]
vertices = PackedVector2Array(0, -240, -60, -240, -300, -300, -240, -300, 0, -60, -60, -60, -300, -120, -240, -120, 0, 120, -60, 120, -300, 60, -240, 60, 0, 300, -60, 300, -300, 240, -240, 240, 0, 540, -540, 540, -300, 420, -240, 420, -420, 420, -540, -540, -420, 300, 0, -540, 0, -420, -60, -420, -60, -300, -120, -300, -120, -420, -240, -420, 0, -300, -60, -120, -120, -120, -120, -240, -240, -240, -420, -300, 0, -120, -60, 60, -120, 60, -120, -60, -240, -60, -420, -120, 0, 60, -60, 240, -120, 240, -120, 120, -240, 120, -420, 60, 0, 240, -60, 420, -120, 420, -120, 300, -240, 300, -420, 240, 0, 420, -300, 300, -420, 120, -300, -420, -420, -420, -300, -240, -420, -240, -300, -60, -420, -60, -300, 120)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 13, 14, 15), PackedInt32Array(16, 17, 18, 19), PackedInt32Array(20, 18, 17), PackedInt32Array(20, 17, 21, 22), PackedInt32Array(21, 23, 24, 25), PackedInt32Array(25, 26, 27, 28), PackedInt32Array(21, 25, 28), PackedInt32Array(21, 28, 29), PackedInt32Array(26, 30, 0), PackedInt32Array(1, 31, 32, 33), PackedInt32Array(2, 1, 33), PackedInt32Array(2, 33, 34, 35), PackedInt32Array(31, 36, 4), PackedInt32Array(5, 37, 38, 39), PackedInt32Array(6, 5, 39), PackedInt32Array(6, 39, 40, 41), PackedInt32Array(37, 42, 8), PackedInt32Array(9, 43, 44, 45), PackedInt32Array(10, 9, 45), PackedInt32Array(10, 45, 46, 47), PackedInt32Array(43, 48, 12), PackedInt32Array(13, 49, 50, 51), PackedInt32Array(14, 13, 51), PackedInt32Array(14, 51, 52, 53), PackedInt32Array(49, 54, 16), PackedInt32Array(50, 49, 16), PackedInt32Array(27, 26, 0), PackedInt32Array(32, 31, 4), PackedInt32Array(38, 37, 8), PackedInt32Array(44, 43, 12), PackedInt32Array(19, 50, 16), PackedInt32Array(52, 19, 18, 55), PackedInt32Array(53, 52, 55), PackedInt32Array(53, 55, 22), PackedInt32Array(53, 22, 21), PackedInt32Array(56, 53, 21), PackedInt32Array(3, 27, 0), PackedInt32Array(29, 3, 2, 57), PackedInt32Array(21, 29, 57), PackedInt32Array(21, 57, 58), PackedInt32Array(21, 58, 35), PackedInt32Array(7, 32, 4), PackedInt32Array(34, 7, 6, 59), PackedInt32Array(35, 34, 59), PackedInt32Array(35, 59, 60), PackedInt32Array(21, 35, 60), PackedInt32Array(11, 38, 8), PackedInt32Array(40, 11, 10, 61), PackedInt32Array(41, 40, 61), PackedInt32Array(41, 61, 62), PackedInt32Array(15, 44, 12), PackedInt32Array(46, 15, 14, 63), PackedInt32Array(47, 46, 63), PackedInt32Array(47, 63, 56), PackedInt32Array(47, 56, 21), PackedInt32Array(62, 47, 21), PackedInt32Array(41, 62, 21), PackedInt32Array(41, 21, 60)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-540, -540, 0, -540, 0, -420, -60, -420, -60, -300, 0, -300, 0, -240, -60, -240, -60, -120, 0, -120, 0, -60, -60, -60, -60, 60, 0, 60, 0, 120, -60, 120, -60, 240, 0, 240, 0, 300, -60, 300, -60, 420, 0, 420, 0, 540, -540, 540), PackedVector2Array(-420, -420, -300, -420, -300, -300, -420, -300), PackedVector2Array(-420, -60, -300, -60, -300, 60, -420, 60), PackedVector2Array(-240, -240, -120, -240, -120, -120, -240, -120), PackedVector2Array(-240, -420, -120, -420, -120, -300, -240, -300), PackedVector2Array(-420, -240, -300, -240, -300, -120, -420, -120), PackedVector2Array(-240, -60, -120, -60, -120, 60, -240, 60), PackedVector2Array(-240, 120, -120, 120, -120, 240, -240, 240), PackedVector2Array(-420, 120, -300, 120, -300, 240, -420, 240), PackedVector2Array(-420, 300, -300, 300, -300, 420, -420, 420), PackedVector2Array(-240, 300, -120, 300, -120, 420, -240, 420)])

[node name="Node2D" type="Node2D"]
script = ExtResource("1_m85eq")

[node name="Clock" type="Label" parent="."]
offset_left = -960.0
offset_top = 400.0
offset_right = -959.0
offset_bottom = 537.0
theme_override_font_sizes/font_size = 100

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="Artboard1" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("1_fuppl")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="Robot" parent="." instance=ExtResource("2_tuwi1")]
position = Vector2(-270, 490)

[node name="junction" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-360, -360)
score = 2
metadata/_edit_lock_ = true

[node name="junction2" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-360, -180)
score = 3
id = [0, 1]
metadata/_edit_lock_ = true

[node name="junction3" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-360, 0)
score = 2
id = [0, 2]
metadata/_edit_lock_ = true

[node name="junction4" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-360, 180)
score = 3
id = [0, 3]
metadata/_edit_lock_ = true

[node name="junction5" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-360, 360)
score = 2
id = [0, 4]
metadata/_edit_lock_ = true

[node name="junction6" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-180, -360)
score = 3
id = [1, 0]
metadata/_edit_lock_ = true

[node name="junction7" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-180, -180)
score = 4
id = [1, 1]
metadata/_edit_lock_ = true

[node name="junction8" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-180, 0)
id = [1, 2]
metadata/_edit_lock_ = true

[node name="junction9" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-180, 180)
score = 4
id = [1, 3]
metadata/_edit_lock_ = true

[node name="junction10" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(-180, 360)
score = 3
id = [1, 4]
metadata/_edit_lock_ = true

[node name="junction11" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(0, -360)
score = 2
id = [2, 0]
metadata/_edit_lock_ = true

[node name="junction12" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(0, -180)
id = [2, 1]
metadata/_edit_lock_ = true

[node name="junction13" parent="." instance=ExtResource("2_l04xk")]
score = 2
id = [2, 2]
metadata/_edit_lock_ = true

[node name="junction14" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(0, 180)
id = [2, 3]
metadata/_edit_lock_ = true

[node name="junction15" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(0, 360)
score = 2
id = [2, 4]
metadata/_edit_lock_ = true

[node name="junction16" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(180, -360)
score = 3
id = [3, 0]
metadata/_edit_lock_ = true

[node name="junction17" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(180, -180)
score = 4
id = [3, 1]
metadata/_edit_lock_ = true

[node name="junction18" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(180, 0)
id = [3, 2]
metadata/_edit_lock_ = true

[node name="junction19" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(180, 180)
score = 4
id = [3, 3]
metadata/_edit_lock_ = true

[node name="junction20" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(180, 360)
score = 3
id = [3, 4]
metadata/_edit_lock_ = true

[node name="junction21" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(360, -360)
score = 2
id = [4, 0]
metadata/_edit_lock_ = true

[node name="junction22" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(360, -180)
score = 3
id = [4, 1]
metadata/_edit_lock_ = true

[node name="junction23" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(360, 0)
score = 2
id = [4, 2]
metadata/_edit_lock_ = true

[node name="junction24" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(360, 180)
score = 3
id = [4, 3]
metadata/_edit_lock_ = true

[node name="junction25" parent="." instance=ExtResource("2_l04xk")]
position = Vector2(360, 360)
score = 2
id = [4, 4]
metadata/_edit_lock_ = true

[node name="Substation" parent="." instance=ExtResource("4_5adhj")]
position = Vector2(0, 540)
rotation = -1.5708
metadata/_edit_lock_ = true

[node name="Substation2" parent="." instance=ExtResource("4_5adhj")]
position = Vector2(0, -540)
rotation = 1.5708
red = false
metadata/_edit_lock_ = true

[node name="scoreBoard" parent="." instance=ExtResource("5_qn2se")]
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0

[node name="scoreBoard2" parent="." instance=ExtResource("5_qn2se")]
offset_left = 540.0
offset_top = -540.0
offset_right = 540.0
offset_bottom = -540.0
red = false

[node name="terminal" parent="." instance=ExtResource("6_wu7gl")]
position = Vector2(-540, -540)
rotation = 1.5708
red = false
metadata/_edit_lock_ = true

[node name="terminal2" parent="." instance=ExtResource("6_wu7gl")]
position = Vector2(540, -540)
rotation = 3.14159
metadata/_edit_lock_ = true

[node name="terminal3" parent="." instance=ExtResource("6_wu7gl")]
position = Vector2(-540, 540)
metadata/_edit_lock_ = true

[node name="terminal4" parent="." instance=ExtResource("6_wu7gl")]
position = Vector2(540, 540)
rotation = -1.5708
red = false
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(540, 540, -540, 540, -540, -540, 540, -540, 540, 540, 600, 600, 600, -600, -600, -600, -600, 600, 600, 600)
metadata/_edit_lock_ = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_ncpnd")
script = ExtResource("7_y3wlr")
metadata/_edit_lock_ = true

[node name="NavigationRegion2D2" type="NavigationRegion2D" parent="."]
visible = false
scale = Vector2(-1, -1)
navigation_polygon = SubResource("NavigationPolygon_ncpnd")
script = ExtResource("7_y3wlr")
metadata/_edit_lock_ = true

[node name="oponent" parent="." instance=ExtResource("8_h8j5a")]
position = Vector2(-270, -490)

[node name="Winner" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -136.5
offset_right = 20.0
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
